# cpp-example

./: .gitignore  README.md
src/: Example.cabal
src/Example/: Interface.hs
src/c/: example_interface.cpp  example_interface.h
